Implementata get api key con filtri su pn-cx-id e pc-cx-groups e valore booleano showVirtualKey + test + log
